# geometry-netplay

./: CMakeLists.txt  README.md
assets/: bg_grid.xcf  boot.xcf  player_texture.xcf  player_texture_blue.xcf
assets/menu/: back_to_menu.xcf  back_to_menu_hover.xcf  menu_footer.xcf  menu_header.xcf  new_game.xcf  new_game_hover.xcf  quit_game.xcf  quit_game_hover.xcf  rematch.xcf  rematch_hover.xcf
src/: asset_loader.c  asset_loader.h  bullets.c  bullets.h  constants.h  f_config.h  f_controls.c  f_controls.h  f_timer.c  f_timer.h  g_session_manager.c  g_session_manager.h  game.c  game.h  game_event.c  game_event.h  game_world.c  game_world.h  main.c  menu.c  menu.h  player.c  player.h  renderer_manager.c  renderer_manager.h  ship.c  ship.h  timer.c  timer.h
src/audio/: a_sound.c  a_sound.h
src/math/: collections.c  collections.h  shapes.c  shapes.h  trigonometry.c  trigonometry.h  vector.c  vector.h
src/renderer/: font.c  font.h  hud.c  hud.h  particle.c  particle.h  r_image.c  r_image.h  renderer_manager.c  renderer_manager.h  text.c  text.h
src/scene/: s_boot.c  s_boot.h  s_game.c  s_game.h  s_main_menu.c  s_main_menu.h  s_orchestrator.c  s_orchestrator.h  s_results.c  s_results.h
src/ui/: ui.c  ui.h
